# bugbounty-scout

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  auth-surface-analyzer.md  command-reference.md  endpoint-mapper.md  evidence-locker.md  example-workflow.md  frontend-exposure-analyzer.md  graphql-risk-mapper.md  har-analyzer.md  idor-bola-matrix.md  paramforge.md  project-correlator.md  release-checklist.md  report-quality-gate.md  safety.md  submission-packager.md  usage.md  workflow-orchestrator.md
examples/: finding.yml  scope.yml
fixtures/: cookies_missing_attributes.har  fake.har  fake_api_key.har  fake_bearer.har  fake_jwt.har  fake_request.txt  fake_response.txt  fake_scope.yml  malformed.har  normal_traffic.har  risky_cache.har  third_party_email.har
fixtures/auth_surface/: expected_auth_surface_report.md  fake_auth.har  fake_cache.har  fake_cors.har  fake_endpoint_inventory.json  fake_evidence_workspace.yml  fake_frontend_inventory.json  fake_headers_response.txt  fake_jwt.txt  fake_request.txt  fake_response.txt
fixtures/authz/: expected_authz_findings.json  expected_authz_report.md  fake_authz_matrix.yml  fake_endpoint_inventory.json  fake_expected_access.yml  fake_observed_results.yml
fixtures/correlate/: expected_correlation_inventory.json  expected_correlation_report.md  expected_triage_leads.json  fake_auth_surface_inventory.json  fake_correlation_project.yml  fake_endpoint_inventory.json  fake_finding.yml  fake_frontend_inventory.json  fake_paramforge_inventory.json
fixtures/endpoints/: expected_inventory.json  fake_app.html  fake_config.json  fake_frontend.js  simple_api.har
fixtures/evidence/: expected_evidence_report.md  expected_quality_warnings.json  fake_authz_report.md  fake_endpoint_inventory.json  fake_frontend_report.md  fake_note.txt  fake_response.txt  fake_workspace_missing_impact.yml  fake_workspace_unredacted.yml
fixtures/frontend/: expected_frontend_inventory.json  fake_app.html  fake_bundle_with_sourcemap.js  fake_bundle_with_sourcemap.js.map  fake_config.json  fake_dom_review.js  fake_postmessage.js
fixtures/graphql/: expected_graphql_inventory.json  expected_graphql_report.md  fake_auth_surface_inventory.json  fake_batched_request.har  fake_endpoint_inventory.json  fake_evidence_workspace.yml  fake_frontend_inventory.json  fake_graphql.har  fake_graphql_errors.json  fake_introspection.json  fake_mutation.graphql  fake_schema.graphql
fixtures/paramforge/: expected_inventory.json  expected_params.txt  expected_routes.txt  fake_api.har  (+8 more)
rules/: redaction.yml  secrets.yml
scripts/: smoke_py_path.sh  test_bench_validation.ps1  test_bench_validation.sh
tests/: test_auth_surface.py  test_authz.py  test_cli.py  test_correlator.py  test_endpoints.py  test_evidence.py  test_frontend.py  test_graphql.py  test_har.py  test_models.py  test_paramforge.py  test_phase3a.py  test_redaction.py  test_reporting.py  test_scope.py  test_submit.py  test_workflow.py
(+82 files in other folders)
