[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bugbounty-scout"
version = "0.1.0"
description = "A local-first CLI workbench for authorized web bug bounty testing"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "BugBountyScout contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
bbs = "bugbounty_scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bugbounty_scout"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"] # Typer uses Option calls as declarative parameter defaults.

[tool.ruff.lint.per-file-ignores]
"src/bugbounty_scout/commands/authz_cmd.py" = ["E501"]
"src/bugbounty_scout/modules/authz_matrix.py" = ["E501"]
"tests/test_authz.py" = ["E501"]
"src/bugbounty_scout/modules/auth_surface.py" = ["E501"]
"src/bugbounty_scout/modules/graphql_mapper.py" = ["E501"]
"src/bugbounty_scout/modules/correlator.py" = ["E501"]
"src/bugbounty_scout/modules/workflow.py" = ["E501"]
"src/bugbounty_scout/commands/workflow_cmd.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
